fixtures/cs-hash-01/bad/create-hmac-md5-password.ts
import { createHmac } from "crypto";

export function hashPassword(password: string) {
	return createHmac("md5", "pepper").update(password).digest("hex");
}
